# whiteboard

./: .gitignore  Cargo.toml  PROTOCOL.md  README  README.md
client/: Cargo.toml  index.html  style.css  whiteboard.js
client/src/: connect.rs  draw.rs  lib.rs  main.rs
client/static/: index.html  style.css
server/: Cargo.toml  server.py  server.rb  server_2.rb
server/src/: main.rs
