[package]
name = "whiteboard-client"
version = "0.1.0"
authors = ["Koen Bolhuis <koen.bolhuis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "0.16"
wasm-bindgen = "0.2"
console_error_panic_hook = "*"

[dependencies.web-sys]
version = "*"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]