[package]
name = "whiteboard-server"
version = "0.1.0"
authors = ["Koen Bolhuis <koen.bolhuis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tungstenite = "0.10.0"
tokio-tungstenite = "*"
futures = "0.3"
dashmap = "3.4.0"